--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/rickandmorty
+spring.datasource.username=newuser
+spring.datasource.password=newuser
 
+spring.security.user.password=user
+
+spring.jpa.hibernate.ddl-auto=create-drop
