--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/rickandmorty
 spring.datasource.username=newuser
 spring.datasource.password=newuser
 
-spring.security.user.password=user
-
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
