--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rickandmorty
 spring.datasource.username=newuser
 spring.datasource.password=newuser
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+rickandmorty.url=https://rickandmortyapi.com/api/
+
+server.port=8087
