--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/rickandmorty
-spring.datasource.username=newuser
-spring.datasource.password=newuser
+spring.datasource.username=postgres
+spring.datasource.password=postgre
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=create
